fix: changed nav z-index

--- a/wics-app/src/styles/Navbar.css
+++ b/wics-app/src/styles/Navbar.css
@@ -9,6 +9,7 @@
   height: 72px;
   background-color: #ebe5f3;
   padding: 10px 20px;
+  z-index: 1;
 }
 
 .navbar-logo img {
